# unblend

./: .dockerignore  .gitignore  api.md  benchmark.py  changelog.md  cog.yaml  onnx.md  predictor.py  pyproject.toml  readme.md  requirements-cog.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
demucs/: __init__.py  api.py  apply.py  audio.py  blocks.py  htdemucs.py  metadata.json  onnx.py  repo.py  states.py  transformer.py
demucs/cli/: __init__.py  models.py  onnx.py  progress.py  separate.py  types.py  utils.py
demucs/metal/: __init__.py  dconv_envelope.metal  group_norm.metal  group_norm_gelu.metal  group_norm_glu.metal
docs/: api.md  web-api.md
scripts/: export_safetensors.py
tests/: test_api.py  test_apply.py  test_audio.py  test_benchmark.py  test_blocks.py  test_cli.py  test_cli_utils.py  test_code_standards.py  test_integration.py  test_metadata.py  test_metal_kernels.py  test_onnx_roformer.py  test_onnx_stft.py  test_packaging.py  test_precision.py  test_predictor.py  test_repo.py  test_roformer.py  test_roformer_compile.py  test_roformer_mps.py  test_transformer.py
unblend/: __init__.py  api.py  apply.py  audio.py  blocks.py  exceptions.py  htdemucs.py  metadata.json  model_utils.py  onnx.py  repo.py  roformer.py  states.py  transformer.py
unblend/cli/: __init__.py  models.py  onnx.py  progress.py  separate.py  tune.py  types.py  utils.py
unblend/metal/: README.md  __init__.py  common.metal  dconv_envelope.metal  group_norm.metal  group_norm_gelu.metal  group_norm_glu.metal  rms_norm.metal
web/: package-lock.json  package.json
web/app/: index.html  package.json  vite.config.ts
web/app/src/: index.css  main.tsx  onnx-config.ts
web/app/src/components/: Layout.tsx  home-reset.ts
web/app/src/components/pages/: About.tsx  Benchmark.tsx  Home.tsx  Privacy.tsx
web/app/src/components/ui/: Braid.tsx  Footer.tsx  Header.tsx  ModelPicker.tsx  Settings.tsx  SplitDiagram.tsx  Vinyl.tsx  WaveLane.tsx  Waveform.tsx  stems.ts
web/app/src/hooks/: useDemucs.ts
web/app/src/types/: global.d.ts  index.ts
web/app/src/utils/: audio-decoder.ts  peaks.ts  wav-utils.ts  zip.ts
web/demucs/: README.md  package.json  tsconfig.build.json  tsconfig.json
web/demucs/scripts/: verify-model-artifacts.mjs
web/demucs/src/: ambient.d.ts  audio-processor.ts  constants.ts  index.ts  istft-client.ts  model-artifacts.ts  onnx-client.ts  overlap-accumulator.ts  pipeline.ts  separator.ts  stft-client.ts
web/demucs/src/workers/: istft-worker.ts  onnx-worker.ts  stft-worker.ts
web/demucs/test/: model-artifacts.test.mjs  overlap-accumulator.test.mjs  worker-lifecycle.test.mjs
