[project]
name = "demucs-next"
version = "1.0.0"
description = "Audio source separation for music."
readme = "readme.md"
authors = [
    {name = "Alexandre Défossez", email = "defossez@fb.com"},
    {name = "Ryan Fahey", email = "git@ryan.science"}
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.0.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.1",
    "typer>=0.19.1",
    "httpx>=0.28.1"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
]
onnx = [
  "onnx>=1.14.0",
]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "demucs"
module-root = ""

source-include = ["demucs/metal/*.metal"]
wheel-include = ["demucs/metal/*.metal"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: downloads models / runs real inference (deselect with '-m \"not slow\"')",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[project.scripts]
demucs = "demucs.cli:main"
demucs-inference = "demucs.cli:main" # Provided for compatibility with uvx
